syntax = "proto3";

package vitepb;

message AccountBlock {
    bytes account = 1;
    bytes to = 2;
    bytes prevHash = 3;
    bytes fromHash = 4;

    bytes blockNum = 5;
    map<uint32, bytes> balance = 6;

    bytes signature = 7;
}